--- a/index.html
+++ b/index.html
@@ -1,26 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>YellowAnka</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:qhz18@mails.tsinghua.edu.cn">email</a></li>
-        		<li><a href="https://github.com/TodooQu">github.com/TodooQu</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, this is a site for YellowAnka!</h1>
+	<p>aaaa <em>bbbbb</em> ccccccc <a href="/about">ddddddd</a></p>
+</div><!-- /.blurb -->
