--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, this is a site for YellowAnka!</h1>
-	<p>aaaa <em>bbbbb</em> ccccccc <a href="/about">ddddddd</a></p>
+	<h1>YellowAnka--platform for easy anka!</h1>
+	<p>We are commited to set a platform for players to anka easily and fantasticly.</p>
 </div><!-- /.blurb -->
